[package]
name = "librqbit-dualstack-sockets"
version = "0.2.1"
edition = "2024"

description = "utilities for creating dual-stack TCP and UDP tokio sockets"
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-dualstack-sockets"
repository = "https://github.com/ikatson/librqbit-dualstack-sockets"
readme = "README.md"

[dependencies]
socket2 = "0.5.10"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["net"] }
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
